--- a/ControllerProgrammer.Main/ControllerProgrammer.Main.csproj
+++ b/ControllerProgrammer.Main/ControllerProgrammer.Main.csproj
@@ -10,10 +10,14 @@
   </PropertyGroup>
   <ItemGroup>
     <!--<PackageReference Include="Prism.DryIoc" Version="7.2.0.1422" />-->
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.0.1" />
+    <PackageReference Include="MahApps.Metro" Version="2.3.4" />
     <PackageReference Include="Prism.DryIoc" Version="8.0.0.1909" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ControllerProgrammer.Data\ControllerProgrammer.Data.csproj" />
     <ProjectReference Include="..\ControllerProgrammer.ProgramForm\ControllerProgrammer.ProgramForm.csproj" />
+    <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="5.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
