--- a/ControllerProgrammer.ConsoleTesting/ControllerProgrammer.ConsoleTesting.csproj
+++ b/ControllerProgrammer.ConsoleTesting/ControllerProgrammer.ConsoleTesting.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ControllerProgrammer.Data\ControllerProgrammer.Data.csproj" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageReference Include="System.IO.Ports" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
