--- a/ControllerProgrammer.ProgramForm/ControllerProgrammer.ProgramForm.csproj
+++ b/ControllerProgrammer.ProgramForm/ControllerProgrammer.ProgramForm.csproj
@@ -1,8 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Platform>x86</Platform>
     <UseWPF>true</UseWPF>
     <AssemblyName>ControllerProgrammer.ProgramForm</AssemblyName>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <!--<PackageReference Include="Prism.Wpf" Version="7.2.0.1422" />-->
