--- a/ControllerProgrammer.Interfaces/ControllerProgrammer.Common.csproj
+++ b/ControllerProgrammer.Interfaces/ControllerProgrammer.Common.csproj
@@ -13,6 +13,14 @@
   <ItemGroup>
     <PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
     <PackageReference Include="System.IO.Ports" Version="5.0.0" />
+    <PackageReference Include="DevExpress.WindowsDesktop.Core" Version="19.1.12" />
+    <PackageReference Include="DevExpress.WindowsDesktop.Wpf" Version="19.1.12" />
+    <PackageReference Include="DevExpress.WindowsDesktop.Wpf.Themes.All" Version="19.1.12" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="3.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
