--- a/ControllerProgrammer.ProgramForm/ControllerProgrammer.ProgramForm.csproj
+++ b/ControllerProgrammer.ProgramForm/ControllerProgrammer.ProgramForm.csproj
@@ -10,12 +10,13 @@
   </PropertyGroup>
   <ItemGroup>
     <!--<PackageReference Include="Prism.Wpf" Version="7.2.0.1422" />-->
-    <PackageReference Include="MahApps.Metro" Version="2.3.4" />
+    <PackageReference Include="DevExpress.WindowsDesktop.Core" Version="19.1.12" />
+    <PackageReference Include="DevExpress.WindowsDesktop.Wpf" Version="19.1.12" />
+    <PackageReference Include="DevExpress.WindowsDesktop.Wpf.Themes.All" Version="19.1.12" />
     <PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ControllerProgrammer.Data\ControllerProgrammer.Data.csproj" />
     <ProjectReference Include="..\ControllerProgrammer.Interfaces\ControllerProgrammer.Common.csproj" />
-    <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="5.0.2" />
   </ItemGroup>
 </Project>
