cycle count added

--- a/ControllerProgrammer.Data/ControllerProgrammer.Data.csproj
+++ b/ControllerProgrammer.Data/ControllerProgrammer.Data.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Platform>x86</Platform>
+    <FileVersion>1.0.2.33204</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
