--- a/ControllerProgrammer.Interfaces/ControllerProgrammer.Common.csproj
+++ b/ControllerProgrammer.Interfaces/ControllerProgrammer.Common.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <useWpf>True</useWpf>
     <Platform>x86</Platform>
+    <FileVersion>1.0.3.33204</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
