--- a/ControllerProgrammer.Main/ControllerProgrammer.Main.csproj
+++ b/ControllerProgrammer.Main/ControllerProgrammer.Main.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>ControllerProgrammer.Main</RootNamespace>
     <StartupObject>ControllerProgrammer.Main.App</StartupObject>
     <ApplicationIcon>Images\seti_logo.ico</ApplicationIcon>
+    <FileVersion>1.0.9.33248</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x86</PlatformTarget>
